--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=3001
+mongo_link=mongodb:mongodb://Mansoor-Kalash:MaN.54321@mydata-shard-00-00.rjv8p.mongodb.net:27017,mydata-shard-00-01.rjv8p.mongodb.net:27017,mydata-shard-00-02.rjv8p.mongodb.net:27017/Book?ssl=true&replicaSet=atlas-12n9an-shard-0&authSource=admin&retryWrites=true&w=majority
